* Add VERILATOR_NUMA_STRATEGY environment variable (#6826) (#6880). [Yangyu Chen]
* Add parsing of solve-before inside foreach (#6934). [Pawel Kojma, Antmicro Ltd.]
* Add error when accessing a non-static class field from a static function (#6948). [Artur Bieniek, Antmicro Ltd.]
* Add VerilatedContext::useNumaAssign and set on threads() call (#6954). [Yangyu Chen]
* Support vpi_put/vpi_get forcing of signals (#5933) (#6704). [Christian Hecken]
* Support detailed failure info for constraint violations (#6617) (#6883). [Yilou Wang]
* Support `unique` constraints (on 1D static arrays) (#6810) (#6878). [Srinivasan Venkataramanan]
* Support complex expressions as std::randomize arguments (#6860). [Jakub Wasilewski, Antmicro Ltd.]
* Support dynamic array elements in std::randomize (#6896). [Ryszard Rozak, Antmicro Ltd.]
* Support unbounded '$' in inside range expressions (#6935) (#6938). [Wei-Lun Chiu]
* Support `extern module` as a forward-declaration that is ignored.
* Remove deprecated `--xml-only`.
* Remove deprecated `--make cmake`.
* Change metacomment extra underscore error to BADVLTPRAGMA warning (#6968). [Geza Lore]
* Optimize string temporaries to not be localized (#6969). [Geza Lore]
* Optimize wide word shifts by multiple of word size (#6970). [Geza Lore]
* Optimize concatenations that produce unused bits in DFG (#6971). [Geza Lore]
* Optimize more wide operation temporaries with substitution (#6972). [Geza Lore]
* Optimize right shifts as clean (#6981). [Geza Lore]
* Fix parameterized virtual interface references that have no model references (#4286).
* Fix variable reference lookup for module-level variables (#6741) (#6882). [Yilou Wang]
* Fix MULTIDRIVEN with task and default driver (#4045) (#6858). [em2machine]
* Fix false CASEOVERLAP case item expression lint (#6825) (#6886). [Luca Colagrande]
* Fix virtual interface triggers (#6844). [Igor Zaworski, Antmicro Ltd.]
* Fix use-after-free error (#6846). [Matthew Ballance]