@@ -14,24 +14,22 @@ module t;
   parameter P = 4'h5;
 
   typedef struct {  // Must be unpacked -- existing error check
-    // Update ctor_var_reset to check instead of making a constructor
     bit [3:0] m_lo = P;
     bit [93:0] m_mid = '1;  // Wide
     bit [3:0] m_hi;
   } s_t;
-  s_t s;
+
+  localparam s_t S = '{m_hi: 6};  // Not setting m_mid/m_hi
+
+  localparam S_LO = S.m_lo;
+  localparam S_HI = S.m_hi;
 
   initial begin
-    $display("%p", s);
-    `checkh(s.m_lo, 4'h5);
-    `checkh(s.m_mid, ~94'h0);
-    `checkh(s.m_hi, 4'h0);
-    s.m_mid = 94'ha;
-    s.m_hi = 4'hb;
-    $display("%p", s);
-    `checkh(s.m_lo, 4'h5);
-    `checkh(s.m_mid, 94'ha);
-    `checkh(s.m_hi, 4'hb);
+    `checkh(S.m_hi, 4'h6);
+    `checkh(S_HI, 4'h6);
+
+    `checkh(S.m_lo, 4'h5);
+    `checkh(S_LO, 4'h5);
 
     $write("*-* All Finished *-*\n");
     $finish;
